--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
+
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +37,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+.Menu{
+  margin: 0 auto;
 }
